<resources>
    <string name="app_name">CEapp</string>
    <string name="title_activity_location_maps">Map</string>
    <string name="title_activity_show_leaderboard">Leaderboard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Passord</string>
    <string name="prompt_age">Alder</string>
    <string name="prompt_gender">Kjønn:</string>
    <string name="prompt_confirm_password">Bekreft Passord</string>
    <string-array name="gender_array">
        <item>Mann</item>
        <item>Kvinne</item>
    </string-array>
    <string name="action_sign_in">Login eller Registrer</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
